--- a/test-0.23.1.html
+++ b/test-0.23.1.html
@@ -357,7 +357,7 @@ describe('symbol-sdk.0.23.1',() => {
 			[createTx(bob.publicAccount,6).toAggregate(alice.publicAccount)]
 			.concat(createTx(dave.publicAccount,3).toAggregate(alice.publicAccount))
 			.concat(msigTx.toAggregate(bob.publicAccount));
-signedTx = getSignedTx(aggregateArray,[bob].concat(carols.accounts).concat(dave));
+			signedTx = getSignedTx(aggregateArray,[bob].concat(carols.accounts).concat(dave));
 			clog(signedTx)
 			res = await transactionService.announce(
 				signedTx
@@ -683,9 +683,236 @@ signedTx = getSignedTx(aggregateArray,[bob].concat(carols.accounts).concat(dave)
 				getSignedTx(aggregateArray,[bob])
 			,listener).toPromise())
 			.toBeRejectedWith(new Error('Failure_RestrictionMosaic_Account_Unauthorized'));
-
-
 		});
+
+
+		it('catches Failure_RestrictionAccount_Address_Interaction_Prohibited AllowIncomingAddress', async () => {
+
+			carol1 = nem.Account.generateNewAccount(networkType);
+			nonce = nem.MosaicNonce.createRandom();
+			mosaicId = nem.MosaicId.createFromNonce(nonce, bob.address)
+
+			addressResTx = nem.AccountRestrictionTransaction.createAddressRestrictionModificationTransaction(
+		      nem.Deadline.create(epochAdjustment),
+		      nem.AddressRestrictionFlag.AllowIncomingAddress,
+		      [carol1.address],
+		      [],
+		      networkType
+		    );
+
+			const aggregateArray =
+			[addressResTx.toAggregate(bob.publicAccount)]
+			.concat(createTx(bob.publicAccount,1).toAggregate(alice.publicAccount))
+
+			await expectAsync( transactionService.announce(
+				getSignedTx(aggregateArray,[bob])
+			,listener).toPromise())
+			.toBeRejectedWith(new Error('Failure_RestrictionAccount_Address_Interaction_Prohibited'));
+		});
+
+		it('catches Failure_RestrictionAccount_Address_Interaction_Prohibited BlockIncomingAddress', async () => {
+
+			carol1 = nem.Account.generateNewAccount(networkType);
+			nonce = nem.MosaicNonce.createRandom();
+			mosaicId = nem.MosaicId.createFromNonce(nonce, bob.address)
+
+			addressResTx = nem.AccountRestrictionTransaction.createAddressRestrictionModificationTransaction(
+		      nem.Deadline.create(epochAdjustment),
+		      nem.AddressRestrictionFlag.BlockIncomingAddress,
+		      [alice.address],
+		      [],
+		      networkType
+		    );
+
+			const aggregateArray =
+			[addressResTx.toAggregate(bob.publicAccount)]
+			.concat(createTx(bob.publicAccount,1).toAggregate(alice.publicAccount))
+
+			await expectAsync( transactionService.announce(
+				getSignedTx(aggregateArray,[bob])
+			,listener).toPromise())
+			.toBeRejectedWith(new Error('Failure_RestrictionAccount_Address_Interaction_Prohibited'));
+		});
+
+
+		it('catches Failure_RestrictionAccount_Address_Interaction_Prohibited AllowOutgoingAddress', async () => {
+
+			carol1 = nem.Account.generateNewAccount(networkType);
+			nonce = nem.MosaicNonce.createRandom();
+			mosaicId = nem.MosaicId.createFromNonce(nonce, bob.address)
+
+			addressResTx = nem.AccountRestrictionTransaction.createAddressRestrictionModificationTransaction(
+		      nem.Deadline.create(epochAdjustment),
+		      nem.AddressRestrictionFlag.AllowOutgoingAddress,
+		      [alice.address],
+		      [],
+		      networkType
+		    );
+
+			const aggregateArray =
+			[addressResTx.toAggregate(bob.publicAccount)]
+			.concat(createTx(bob.publicAccount,2).toAggregate(alice.publicAccount))
+			.concat(createTx(carol1.publicAccount,1).toAggregate(bob.publicAccount))
+
+			await expectAsync( transactionService.announce(
+				getSignedTx(aggregateArray,[bob])
+			,listener).toPromise())
+			.toBeRejectedWith(new Error('Failure_RestrictionAccount_Address_Interaction_Prohibited'));
+		});
+
+		it('catches Failure_RestrictionAccount_Address_Interaction_Prohibited BlockOutgoingAddress', async () => {
+
+			carol1 = nem.Account.generateNewAccount(networkType);
+			nonce = nem.MosaicNonce.createRandom();
+			mosaicId = nem.MosaicId.createFromNonce(nonce, bob.address)
+
+			addressResTx = nem.AccountRestrictionTransaction.createAddressRestrictionModificationTransaction(
+		      nem.Deadline.create(epochAdjustment),
+		      nem.AddressRestrictionFlag.BlockOutgoingAddress,
+		      [alice.address],
+		      [],
+		      networkType
+		    );
+
+			const aggregateArray =
+			[addressResTx.toAggregate(bob.publicAccount)]
+			.concat(createTx(bob.publicAccount,2).toAggregate(alice.publicAccount))
+			.concat(createTx(alice.publicAccount,1).toAggregate(bob.publicAccount))
+
+			await expectAsync( transactionService.announce(
+				getSignedTx(aggregateArray,[bob])
+			,listener).toPromise())
+			.toBeRejectedWith(new Error('Failure_RestrictionAccount_Address_Interaction_Prohibited'));
+		});
+
+		it('catches Failure_RestrictionAccount_Mosaic_Transfer_Prohibited AllowMosaic', async () => {
+
+			carol1 = nem.Account.generateNewAccount(networkType);
+			nonce = nem.MosaicNonce.createRandom();
+			mosaicId = nem.MosaicId.createFromNonce(nonce, bob.address)
+
+			//モザイク作成
+			mosaicDefTx = nem.MosaicDefinitionTransaction.create(
+				nem.Deadline.create(epochAdjustment),
+				nonce,
+				mosaicId,
+				nem.MosaicFlags.create(true, true, true),
+				0,
+				nem.UInt64.fromUint(0),
+				networkType
+			);
+
+			//モザイク変更
+			mosaicChangeTx = nem.MosaicSupplyChangeTransaction.create(
+				nem.Deadline.create(epochAdjustment),
+				mosaicDefTx.mosaicId,
+				nem.MosaicSupplyChangeAction.Increase,
+				nem.UInt64.fromUint(1000000),
+				networkType
+			);
+
+			distMosaicTx = function(publicAccount,mosaicId){
+		      message = getRandMessage(1023);
+
+		      return     nem.TransferTransaction.create(
+		          nem.Deadline.create(epochAdjustment),
+		          publicAccount.address,
+		          [new nem.Mosaic(mosaicId, nem.UInt64.fromUint(1))],
+		          nem.PlainMessage.create(message),
+		          networkType
+		        );
+		    }
+
+			mosaicRexTx = nem.AccountRestrictionTransaction.createMosaicRestrictionModificationTransaction(
+		      nem.Deadline.create(epochAdjustment),
+		      nem.MosaicRestrictionFlag.AllowMosaic,
+		      [mosaicDefTx.mosaicId],
+		      [],
+		      networkType
+		    );
+
+
+			const aggregateArray =
+			[createTx(bob.publicAccount,50).toAggregate(alice.publicAccount)]
+            .concat(mosaicDefTx.toAggregate(bob.publicAccount))
+            .concat(mosaicChangeTx.toAggregate(bob.publicAccount))
+			.concat(mosaicRexTx.toAggregate(bob.publicAccount))
+			.concat(createTx(bob.publicAccount,1).toAggregate(alice.publicAccount))
+
+
+
+			await expectAsync( transactionService.announce(
+				getSignedTx(aggregateArray,[bob])
+			,listener).toPromise())
+			.toBeRejectedWith(new Error('Failure_RestrictionAccount_Mosaic_Transfer_Prohibited'));
+		});
+
+		it('catches Failure_RestrictionAccount_Mosaic_Transfer_Prohibited BlockMosaic', async () => {
+
+			carol1 = nem.Account.generateNewAccount(networkType);
+			nonce = nem.MosaicNonce.createRandom();
+			mosaicId = nem.MosaicId.createFromNonce(nonce, bob.address)
+
+			//モザイク作成
+			mosaicDefTx = nem.MosaicDefinitionTransaction.create(
+				nem.Deadline.create(epochAdjustment),
+				nonce,
+				mosaicId,
+				nem.MosaicFlags.create(true, true, true),
+				0,
+				nem.UInt64.fromUint(0),
+				networkType
+			);
+
+			//モザイク変更
+			mosaicChangeTx = nem.MosaicSupplyChangeTransaction.create(
+				nem.Deadline.create(epochAdjustment),
+				mosaicDefTx.mosaicId,
+				nem.MosaicSupplyChangeAction.Increase,
+				nem.UInt64.fromUint(1000000),
+				networkType
+			);
+
+			distMosaicTx = function(publicAccount,mosaicId){
+		      message = getRandMessage(1023);
+
+		      return     nem.TransferTransaction.create(
+		          nem.Deadline.create(epochAdjustment),
+		          publicAccount.address,
+		          [new nem.Mosaic(mosaicId, nem.UInt64.fromUint(1))],
+		          nem.PlainMessage.create(message),
+		          networkType
+		        );
+		    }
+
+			mosaicRexTx = nem.AccountRestrictionTransaction.createMosaicRestrictionModificationTransaction(
+		      nem.Deadline.create(epochAdjustment),
+		      nem.MosaicRestrictionFlag.BlockMosaic,
+		      [mosaicDefTx.mosaicId],
+		      [],
+		      networkType
+		    );
+
+
+			const aggregateArray =
+			[createTx(bob.publicAccount,50).toAggregate(alice.publicAccount)]
+            .concat(mosaicDefTx.toAggregate(bob.publicAccount))
+            .concat(mosaicChangeTx.toAggregate(bob.publicAccount))
+			.concat(mosaicRexTx.toAggregate(carol1.publicAccount))
+			.concat(distMosaicTx(carol1.publicAccount,mosaicId).toAggregate(bob.publicAccount));
+
+
+
+			await expectAsync( transactionService.announce(
+				getSignedTx(aggregateArray,[bob,carol1])
+			,listener).toPromise())
+			.toBeRejectedWith(new Error('Failure_RestrictionAccount_Mosaic_Transfer_Prohibited'));
+		});
+
+
+
+
+
 
 
 	});
@@ -789,7 +1016,6 @@ signedTx = getSignedTx(aggregateArray,[bob].concat(carols.accounts).concat(dave)
 			.concat(subNamespaceTx.toAggregate(bob.publicAccount))
 
 			signedTx = getSignedTx(aggregateArray,[bob]);
-//			clog(signedTx);
 			await expectAsync( transactionService.announce(
 				getSignedTx(aggregateArray,[bob])
 			,listener).toPromise())
@@ -824,7 +1050,6 @@ signedTx = getSignedTx(aggregateArray,[bob].concat(carols.accounts).concat(dave)
 			.concat(subNamespaceTx.toAggregate(bob.publicAccount))
 
 			signedTx = getSignedTx(aggregateArray,[bob]);
-//			clog(signedTx);
 			await expectAsync( transactionService.announce(
 				getSignedTx(aggregateArray,[bob])
 			,listener).toPromise())
